# cloud-agent

./: .gitignore  BUILD_SUCCESS.md  CHANGELOG.md  CI_CD_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  FEATURE_BRANCH_SUMMARY.md  LICENSE  MIGRATION.md  Makefile  PR_CREATED.md  PUSH_SUMMARY.md  QUICKSTART.md  README-RUST.md  README.md  RELEASE.md  RUST_CONVERSION_SUMMARY.md  TESTING.md  WORKFLOWS_SUMMARY.md  build.sh  deny.toml  deploy.sh  install-skill.sh  install.sh  main.tf  mkdocs.yml  release-please-config.json  startup-script.sh  terraform.tfvars.example  uninstall.sh  variables.tf
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  build.yml  ci.yml  deploy-docs.yml  quality.yml  release-please.yml  security.yml
docs/: index.md
docs/agents/: adding-agents.md  auggie.md  claude.md  index.md
docs/commands/: deploy.md  index.md  ssh-files.md  vm-management.md
docs/configuration/: environment.md  gcp-setup.md
docs/contributing/: architecture.md  development.md
docs/getting-started/: installation.md  prerequisites.md  quick-start.md
examples/: basic_usage.md
hooks/: auggie.sh  claude.sh  codex.sh
skills/cloud-agent/: SKILL.md
skills/cloud-auggie/: SKILL.md
src/: cli.rs  config.rs  error.rs  gcp.rs  git.rs  main.rs  ssh.rs  utils.rs
src/agents/: auggie.rs  claude.rs  codex.rs  mod.rs
tests/: integration_test.rs  unit_test.rs
