[package]
name = "cloud-agent"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Plichta <jeremy.plichta@redis.com>"]
description = "Deploy repos to Cloud Agent VMs for AI coding agents"
license = "MIT"
repository = "https://github.com/jeremyplichta/cloud-agent"

[[bin]]
name = "ca"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for IP detection
reqwest = { version = "0.12", features = ["json"] }

# SSH client
russh = "0.45"
russh-keys = "0.45"

# Process execution
which = "7.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
walkdir = "2.5"
tempfile = "3.14"

# Time utilities
chrono = "0.4"

# Home directory detection
dirs = "5.0"

# Regex for parsing
regex = "1.11"

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
mockito = "1.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

